--- a/modules/6-G/day3.tex
+++ b/modules/6-G/day3.tex
@@ -4,7 +4,7 @@
 \begin{applicationActivities}{3}{27}
 
 \begin{activity}{5}
-  Suppose the matrix \(M\) is invertable, so there exists \(M^{-1}\)
+  Suppose the matrix \(M\) is invertible, so there exists \(M^{-1}\)
   with \(MM^{-1}=I\). It follows that \(\det(M)\det(M^{-1})=\det(I)\).
 
   What is the only number that \(\det(M)\) cannot equal?
@@ -19,8 +19,8 @@
 \end{activity}
 
 \begin{fact}
-  Since \(\det(M^{-1})=\frac{1}{\det(M)}\) for every invertable matrix \(M\),
-  a square matrix \(M\) is invertable if and only if \(\det(M)\not=0\).
+  Since \(\det(M^{-1})=\frac{1}{\det(M)}\) for every invertible matrix \(M\),
+  a square matrix \(M\) is invertible if and only if \(\det(M)\not=0\).
 \end{fact}
 
 \begin{observation}
@@ -58,9 +58,9 @@ for any value of \(\lambda\),
 we are more interested in finding values of $\lambda$ such that
 $A-\lambda I$ has a nontrivial kernel.
 \item Thus \(\RREF(A-\lambda I)\) must have a non-pivot column, and therefore
-\(A-\lambda I\) cannot be invertable.
+\(A-\lambda I\) cannot be invertible.
 \item
-Since \(A-\lambda I\) cannot be invertable, our eigenvalues must satisfy
+Since \(A-\lambda I\) cannot be invertible, our eigenvalues must satisfy
 \(\det(A-\lambda I)=0\).
 \end{itemize}
 \end{observation}
