Module G Part 5 first draft

--- a/modules/6-G/index.tex
+++ b/modules/6-G/index.tex
@@ -19,5 +19,6 @@
 \input{modules/6-G/day2.tex}
 \input{modules/6-G/day3.tex}
 \input{modules/6-G/day4.tex}
+\input{modules/6-G/day5.tex}
 
 \end{module}
