--- a/modules/6-G/day4.tex
+++ b/modules/6-G/day4.tex
@@ -2,6 +2,8 @@
 % ^ leave for LaTeXTools build functionality
 
 \begin{applicationActivities}{4}{28}
+
+
 \begin{observation}
 Recall from last class:
 \begin{itemize}
@@ -18,6 +20,17 @@ containing all \term{eigenvectors} \(\vec x\) satisfying
 \end{observation}
 
 \begin{activity}{5}
+Let  $A=\begin{bmatrix}0 & -1 \\ 1 & 0 \end{bmatrix}$.
+  \begin{subactivity}
+    Compute the eigenvalues of $A$.
+  \end{subactivity}
+  \begin{subactivity}
+     Sketch a picture of the transformation of the unit square.
+     What about this picture reveals that \(A\) has no eigenvectors?
+   \end{subactivity}
+\end{activity}
+
+\begin{activity}{5}
   If $A$ is a $4 \times 4$ matrix, what is the largest number of eigenvalues $A$ can have?
   \begin{enumerate}[(a)]
   \item $3$
@@ -28,47 +41,56 @@ containing all \term{eigenvectors} \(\vec x\) satisfying
   \end{enumerate}
 \end{activity}
 
-\begin{activity}{5}
-  $2$ is an eigenvalue of the matrix $A=\begin{bmatrix} 1 & -2 & 1 \\ -1 & 0 & 1 \\ -1 & -2 & 3\end{bmatrix}$.
+\begin{observation}
+  An \(n\times n\) matrix may have anywhere between \(0\) and \(n\)
+  real-valued eigenvalues. But if complex eigenvalues are included,
+  then every \(n\times n\) matrix has \(n\) eigenvalues (counting
+  algebraic multiplicites).
+\end{observation}
 
-  Compute the eigenspace of $A$ associated to the eigenvalue $2$ by
-  solving for the kernel of
-  \[
-    A-2I
-      =
-    \begin{bmatrix}
-      1-2 & -2 & 1 \\
-      -1 & 0-2 & 1 \\
-      -1 & -2 & 3-2
-    \end{bmatrix}
-      =
-    \begin{bmatrix}
-      -1 & -2 & 1 \\
-      -1 & -2 & 1 \\
-      -1 & -2 & 1
-    \end{bmatrix}
-  \]
+\begin{activity}{5}
+  The matrix
+  $A=\begin{bmatrix} 1 & -2 & 1 \\ -1 & 0 & 1 \\ -1 & -2 & 3\end{bmatrix}$
+  has characteristic polynomial \(-\lambda(\lambda-2)^2\).
+
+  Find the dimension of the eigenspace of $A$ associated to the
+  eigenvalue $2$ (the dimension of the kernel of \(A-2I\)).
+  % \[
+  %   A-2I
+  %     =
+  %   \begin{bmatrix}
+  %     1-2 & -2 & 1 \\
+  %     -1 & 0-2 & 1 \\
+  %     -1 & -2 & 3-2
+  %   \end{bmatrix}
+  %     =
+  %   \begin{bmatrix}
+  %     -1 & -2 & 1 \\
+  %     -1 & -2 & 1 \\
+  %     -1 & -2 & 1
+  %   \end{bmatrix}
+  % \]
 \end{activity}
 
 \begin{activity}{5}
-  $2$ is an eigenvalue of the matrix $B=\begin{bmatrix} -3 & -9 & 5 \\ -2 & -2 & 2 \\ -7 & -13 & 9 \end{bmatrix}$.
+  The matrix
+  $B=\begin{bmatrix} -3 & -9 & 5 \\ -2 & -2 & 2 \\ -7 & -13 & 9 \end{bmatrix}$
+  has characteristc polynomial \(-\lambda(\lambda-2)^2\).
 
-  Compute the eigenspace of $B$ associated to the eigenvalue $2$ by
-  solving for the kernel of \(B-2I\).
+  Find the dimension of the eigenspace of $B$ associated to the
+  eigenvalue $2$ (the dimension of the kernel of \(B-2I\)).
 \end{activity}
 
 \begin{definition}
-
-\begin{itemize}
-\item The \term{algebraic multiplicity} of an eigenvalue is its multiplicity as a root of the characteristic polynomial.
-\item The \term{geometric multiplicity} of an eigenvalue is the dimension of the eigenspace.
-\end{itemize}
-
+While the \term{algebraic multiplicity} of an eigenvalue is its multiplicity as
+a root of the characteristic polynomial,
+the \term{geometric multiplicity} of an eigenvalue is the dimension of its
+eigenspace.
 \end{definition}
 
 \begin{fact}
-  The geometric multiplicity of an eigenvalue cannot exceed its
-  algebraic multiplicity (but it \textit{can} be different).
+  As we've seen, the geometric multiplicity may be different than
+  its algebraic multiplicity, but it cannot exceed it.
 \end{fact}
 
 % \begin{activity}{5} How are the algebraic and geometric multiplicities related?
@@ -80,19 +102,21 @@ containing all \term{eigenvectors} \(\vec x\) satisfying
 % \end{activity}
 
 \begin{activity}{20}
-   Find all of the eigenvalues, along with both their algebraic and geometric multiplicities, for the matrix $\begin{bmatrix} -3 & 1 & 2 & 1 \\ -9 & 5 & -2 & -1 \\ 31 & -17 & 6 & 3 \\ -69 & 39 & -18 & -9 \end{bmatrix}$.  Use technology to help you!
-\end{activity}
-
-
-
-\begin{activity}{10}
-Let  $A=\begin{bmatrix}0 & -1 \\ 1 & 0 \end{bmatrix}$.
-\begin{subactivity}
-  Find the eigenvalues of $A$
+  Consider the \(4\times 4\) matrix
+  \[
+    \begin{bmatrix}
+      -3 & 1 & 2 & 1 \\
+      -9 & 5 & -2 & -1 \\
+      31 & -17 & 6 & 3 \\
+      -69 & 39 & -18 & -9
+    \end{bmatrix}
+  \]
+  \begin{subactivity}
+    Use technology (e.g. Wolfram Alpha) to find its characteristic polynomial.
   \end{subactivity}
   \begin{subactivity}
-   Describe what this linear transformation is doing geometrically; draw a picture.
-   \end{subactivity}
+    Find the algebraic and geometric multiplicities for both eigenvalues.
+  \end{subactivity}
 \end{activity}
 
 
