--- a/modules/6-G/day3.tex
+++ b/modules/6-G/day3.tex
@@ -12,12 +12,16 @@
     M^{-1}=\begin{bmatrix}-2&1\\3/2&-1/2\end{bmatrix}
   \]
 
+\ \\
+
   Compute \(\det(M)\) and \(\det(M^{-1})\).
 \end{activity}
 
 \begin{activity}{5}
   Suppose the matrix \(M\) is invertible, so there exists \(M^{-1}\)
   with \(MM^{-1}=I\). It follows that \(\det(M)\det(M^{-1})=\det(I)\).
+
+\ \\
 
   What is the only number that \(\det(M)\) cannot equal?
   \begin{multicols}{4}
@@ -31,11 +35,13 @@
 \end{activity}
 
 \begin{fact}
-  For every invertible matrix \(M\),
+  \begin{itemize}
+\item   For every invertible matrix \(M\),
   \(\det(M^{-1})=\frac{1}{\det(M)}\).
 
-  Furthermore,
+\item  Furthermore,
   a square matrix \(M\) is invertible if and only if \(\det(M)\not=0\).
+  \end{itemize}
 \end{fact}
 
 \begin{observation}
@@ -59,7 +65,10 @@ $$A\begin{bmatrix} 2 \\ 1 \end{bmatrix} = \begin{bmatrix} 6 \\ 3 \end{bmatrix} =
 \begin{definition}Let $A \in \IR^{n \times n}$.
 An \term{eigenvector} is a vector $\vec{x} \in \IR^n$ such that $A\vec{x}$ is parallel to $\vec{x}$.
 
-In other words, $A\vec{x}=\lambda \vec{x}$ for some scalar $\lambda$.
+In other words, $A\vec{x}=\lambda \vec{x}$ for some scalar $\lambda$. \\
+
+\ \\
+
 We call this \(\lambda\) an \term{eigenvalue} of \(A\).
 \end{definition}
 
@@ -82,7 +91,9 @@ Since \(A-\lambda I\) cannot be invertible, our eigenvalues must satisfy
 
 \begin{definition}
 Computing \(\det(A-\lambda I)\) results in the
-\term{characteristic polynomial} of \(A\).
+\term{characteristic polynomial} of \(A\). \\
+
+\ \\
 
 For example, when
 \(A=\begin{bmatrix}1 & 2 \\ 3 & 4\end{bmatrix}\), we have
@@ -94,6 +105,7 @@ For example, when
   \begin{bmatrix}1-\lambda & 2 \\ 3 & 4-\lambda\end{bmatrix}
 \]
 
+\ \\
 Thus the characteristic polynomial of \(A\) is
 
 \[
@@ -108,69 +120,16 @@ Thus the characteristic polynomial of \(A\) is
 \end{definition}
 
 \begin{activity}{15}
-  Complete the following computation of the characteristic polynomial
-  \(A-\lambda I\) for
+  Compute $\det(A-\lambda I)$ to find the characteristic polynomial of  
   $A=\begin{bmatrix} 6 & -2 & 1 \\ 17 & -5 & 5 \\ -4 & 2 & 1 \end{bmatrix}$.
 
-  \scalebox{.8}{\parbox{1.2\linewidth}{
-  \begin{align*}
-    \begin{bmatrix} 6-\lambda & -2 & 1 \\ 17 & -5-\lambda & 5 \\ -4 & 2 & 1-\lambda \end{bmatrix}
-  &=
-    (6-\lambda)\det \begin{bmatrix}
-      \unknown & \unknown & \unknown \\
-      0 & 1 & -1 \\
-      1 & 2 & 0
-    \end{bmatrix}
-    -2\det \begin{bmatrix}
-      \unknown & \unknown & \unknown \\
-      0 & 1 & -1 \\
-      1 & 2 & 0
-    \end{bmatrix}
-    +\det \begin{bmatrix}
-      \unknown & \unknown & \unknown \\
-      0 & 1 & -1 \\
-      1 & 2 & 0
-    \end{bmatrix}
-  \\ &=
-    (6-\lambda)\det \begin{bmatrix}
-      1 & 0 & 0 \\
-      \unknown & \unknown & \unknown \\
-      \unknown & \unknown & \unknown \\
-    \end{bmatrix}
-    +2\det \begin{bmatrix}
-      1 & 0 & 0 \\
-      \unknown & \unknown & \unknown \\
-      \unknown & \unknown & \unknown \\
-    \end{bmatrix}
-    -\det \begin{bmatrix}
-      1 & 0 & 0 \\
-      \unknown & \unknown & \unknown \\
-      \unknown & \unknown & \unknown \\
-    \end{bmatrix}
-  \\ &=
-    (6-\lambda)\det \begin{bmatrix}
-      \unknown & \unknown \\
-      \unknown & \unknown \\
-    \end{bmatrix}
-    +2\det \begin{bmatrix}
-      \unknown & \unknown \\
-      \unknown & \unknown \\
-    \end{bmatrix}
-    -\det \begin{bmatrix}
-      \unknown & \unknown \\
-      \unknown & \unknown \\
-    \end{bmatrix}
-  \\ &=
-    (6-\lambda)((-5-\lambda)(1-\lambda)-10)
-    +2(17(1-\lambda)+20)
-    -(-4(-5-\lambda)-34)
-  \end{align*}}}
+
 \end{activity}
 
 \begin{activity}{15}
 Let $A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}$.
 \begin{subactivity}
-Compute $\det \begin{bmatrix} 2-\lambda & 2 \\ 0 & 3-\lambda \end{bmatrix}$ to determine the characteristic polynomial of $A$.
+Compute $\det (A-\lambda I)$ to determine the characteristic polynomial of $A$.
 \end{subactivity}
 \begin{subactivity}
 Find the roots of the characteristic polynomial
@@ -215,11 +174,17 @@ $\lambda\in\{-2,3,6\}$ to determine the respective eigenspaces.
 \end{activity}
 
 \begin{observation}
-  Recall that \(a\) is a root of the polynomial \(p(\lambda)\) if
-  the polynomial may be factored into \(p(\lambda)=q(\lambda)(\lambda-a)^k\)
-  for some maximal positive integer \(k\), since \(p(a)=q(a)(a-a)^k=0\).
+  Recall that if \(a\) is a root of the polynomial \(p(\lambda)\), the {\bf multiplicity} of $a$ is the largest number $k$ such that \(p(\lambda)=q(\lambda)(\lambda-a)^k\) for some polynomial $q(\lambda)$.
 
-  This \(k\) is called the \term{algebraic multiplicity} of the root.
-\end{observation}
+\ \\
+
+  For this reason, the {\bf algebraic multiplicity} of an eigenvalue is its multiplicity as a root of the characteristic polynomial.
+
+  \end{observation}
+  \begin{example}
+  If $A=\begin{bmatrix} 3 & 1 & -1 \\ 0 & 3 & 3 \\ 0 & 0 & -1 \end{bmatrix}$, the characteristic polynomial is $p(\lambda) = (\lambda-3)^2 (\lambda+1)$. \\
+  \ \\
+  The eigenvalues are $3$ (with algebraic multiplicity 2) and $-1$ (with algebraic multiplicity 1).
+  \end{example}
 
 \end{applicationActivities}
