--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -1,4 +1,4 @@
-\usepackage{enumerate,amssymb,tikz,amsmath,amsthm,multicol,hyperref,environ,etoolbox}
+\usepackage{enumerate,amssymb,tikz,amsmath,amsthm,multicol,hyperref,environ,etoolbox,graphicx}
 \usetikzlibrary{arrows.meta}
 
 
