--- a/modules/6-G/day5.tex
+++ b/modules/6-G/day5.tex
@@ -51,12 +51,11 @@ Links are endorsements.
 
 \begin{enumerate}
 \item
-%If a webpage is important, there should be other important webpages that link to it.
 A webpage is important if it is linked to (endorsed) by important pages.
 
-\item 
-%If a webpage links out to fewer pages, then its links are more valuable.
-A webpage distributes its importance equally among all the pages it links to (endorses).
+\item
+A webpage distributes its importance equally among all the pages it links to
+(endorses).
 \end{enumerate}
 \end{observation}
 
@@ -81,6 +80,8 @@ Consider this small network with only three pages.  Let $x_1, x_2, x_3$ be the i
 \end{tikzpicture}
 \end{center}
 
+\columnbreak
+
 \begin{enumerate}
 \item $x_1$ splits its endorsement in half between $x_2$ and $x_3$
 \item $x_2$ sends all of its endorsement to $x_1$
@@ -88,13 +89,11 @@ Consider this small network with only three pages.  Let $x_1, x_2, x_3$ be the i
 \end{enumerate}
 
 This corresponds to the \term{page rank system}
-\scalebox{0.8}{\parbox{.5\linewidth}{
-\begin{align*}
-x_1 &= x_2 \\
-x_2 &= \frac{1}{2} x_1+x_3 \\
-x_3 &= \frac{1}{2} x_1
-\end{align*}
-}}
+\begin{alignat*}{4}
+  && x_2 && &=& x_1 \\
+\frac{1}{2} x_1&& &+&x_3 &=& x_2 \\
+\frac{1}{2} x_1&& && &=& x_3
+\end{alignat*}
 \end{multicols}
 \end{example}
 
@@ -120,56 +119,50 @@ x_3 &= \frac{1}{2} x_1
   \end{scope}
   \end{tikzpicture}
   \end{center}
-\scalebox{0.8}{\parbox{.5\linewidth}{
-\begin{align*}
-x_1 &= x_2 \\
-x_2 &= \frac{1}{2} x_1+x_3 \\
-x_3 &= \frac{1}{2} x_1
-\end{align*}
-}}
+  \columnbreak
+  \begin{alignat*}{4}
+    && x_2 && &=& x_1 \\
+  \frac{1}{2} x_1&& &+&x_3 &=& x_2 \\
+  \frac{1}{2} x_1&& && &=& x_3
+  \end{alignat*}
 
 \end{multicols}
-  
 
-
-We can summarize the left hand side of the system in the vector $\vect{x}=\begin{bmatrix} x_1 \\ x_2 \\ x_3 \end{bmatrix}$ and the right hand side in following \term{page rank matrix}.
-% , in which the columns describes the percentage of links out from the corresponding page into the pages corresponding to each row.
-
-\[
+We can summarize the left hand side of the system by putting its coefficients
+into a \term{page rank matrix}
+\(
   A
-    =
-  \begin{bmatrix}
-    0\% & 100\% & 0\% \\
-    50\% & 0\% & 100\% \\
-    50\% & 0\% & 0\%
-  \end{bmatrix}
     =
   \begin{bmatrix}
     0 & 1 & 0 \\
     \frac{1}{2} & 0 & 1 \\
     \frac{1}{2} & 0 & 0
   \end{bmatrix}
-\]
+\), and store the right hand side of the system as the vector
+\(\vect{x}=\begin{bmatrix} x_1 \\ x_2 \\ x_3 \end{bmatrix}\).
 
-Thus, the page rank system can be summarized as $A\vec{x}=\vec{x}$.  \\
+Thus, computing the imporance of pages on a network is equivalent to solving
+the matrix equation \(A\vec{x}=\vec{x}\).
 
 \end{example}
 
 \begin{activity}{5}
 A \term{page rank vector} for a page rank matrix \(A\) is a vector $\vec{x}$
-satisfying \(A\vec{x}=\vec{x}\).\\
+satisfying \(A\vec{x}=\vec{x}\). This vector describes the relative
+importance of webpages on the network described by \(A\).
 
-\ \\
 Thus, the \$700,000,000,000 problem is what kind of problem?
 \begin{enumerate}[(a)]
+\item A bijection problem
+\item A calculus problem
 \item A determinant problem
-\item An eigenvalue problem
 \item An eigenvector problem
 \end{enumerate}
 \end{activity}
 
 \begin{activity}{10}
-Find a page rank vector (an eigenvector associated to the eigenvalue $1$)
+Find a page rank vector \(\vec{x}\) satisfying \(A\vec{x}=\vec{x}\)
+(an eigenvector associated to the eigenvalue \(1\))
 for the following network's page rank matrix \(A\).
 
 \begin{multicols}{2}
@@ -342,7 +335,7 @@ Which webpage is most important?
 \end{activity}
 
 \begin{observation}
-Since a steady state vector for the network is given by \(\vec x\),
+Since a page rank vector for the network is given by \(\vec x\),
 it's reasonable to consider page \(2\) as the most important page.
 
 \parbox{\textwidth}{
