--- a/assessments/problems/G2.tex
+++ b/assessments/problems/G2.tex
@@ -18,7 +18,7 @@ So $A$ has eigenvalues $0$ (with multiplicity 1) and $1$ (with algebraic multipl
 \end{solution}
 
 
-\begin{problem}{G2} 
+\begin{problem}{G2}
 Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 8 & -3 & -1 \\ 21 & -8 & -3 \\ -7 & 3 & 2\end{bmatrix}$.
 \end{problem}
 \begin{solution}
@@ -33,52 +33,54 @@ So the eigenvalues are $0$ (with algebraic multiplicity 1) and $1$ (with algebra
 \end{solution}
 
 
-\begin{problem}{G2} 
+\begin{problem}{G2}
 Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 9 & -3 & 2 \\ 19 & -6 & 5 \\ -11 & 4 & -2\end{bmatrix}$.
 \end{problem}
 \begin{solution}
-1 with algebraic multiplicity 2, and -1 with algebraic multiplicity 1.
+1 (with algebraic multiplicity 2), and -1 (with algebraic multiplicity 1).
 \end{solution}
 
-\begin{problem}{G2} 
+\begin{problem}{G2}
 Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 9 & -3 & 2 \\ 19 & -6 & 5 \\ -5 & 2 & 0 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-1 with algebraic multiplicity 3
+1 (with algebraic multiplicity 3)
 \end{solution}
 
-\begin{problem}{G2} 
+\begin{problem}{G2}
 Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 9 & -3 & 2 \\ 23 & -8 & 5 \\  -1 & 0 & 0 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-1 with algebraic multiplicy 2, and -1 with algebraic multiplicity 1.
+1 (with algebraic multiplicy 2), and -1 (with algebraic multiplicity 1).
 \end{solution}
 
-\begin{problem}{G2} 
+\begin{problem}{G2}
 Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 9 & -3 & 2 \\ 23 & -8 & 5 \\  2 & -1 & 1 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-The eigenvalues are $-1$, $1$, and $2$, each with multiplicity 1.
+The eigenvalues are $-1$, $1$, and $2$ (each with algebraic multiplicity 1).
 \end{solution}
 
-\begin{problem}{G2} 
+\begin{problem}{G2}
 Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 8 & -3 & 2 \\ 15 & -5 & 5 \\ -3 & 2 & 1 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-The eigenvalues are $0$ with multiplicity 1 and $2$, with algebraic multiplicity 2.
+The eigenvalues are $0$ (with algebraic multiplicity 1),
+and $2$ (with algebraic multiplicity 2).
 \end{solution}
 
-\begin{problem}{G2} 
+\begin{problem}{G2}
 Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix} 8 & -3 & 2 \\ 23 & -9 & 5 \\ -7 & 2 & -3 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-The eigenvalues are $0$ with multiplicity 1 and $-2$, with algebraic multiplicity 2.
+The eigenvalues are $0$ (with algebraic multiplicity 1)
+and $-2$ (with algebraic multiplicity 2).
 \end{solution}
 
-\begin{problem}{G2} 
+\begin{problem}{G2}
 Compute the eigenvalues, along with their algebraic multiplicities, of the matrix $ \begin{bmatrix}2 & -3 & 2 \\ 8 & -9 & 5 \\ 8 & -7 & 3 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-The eigenvalues are $0$ with multiplicity 1 and $-2$, with algebraic multiplicity 2.
+The eigenvalues are $0$ (with algebraic multiplicity 1)
+and $-2$ (with algebraic multiplicity 2).
 \end{solution}
-
